ingress-nginx/wp-ingress.yaml
###refer https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default 
  name: wordpress-ingress
spec:
  rules:
  - host: "adan.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: akrwp-1153-0723-wordpress
            port:
              number: 80
